--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_welcome.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_welcome.xml
@@ -7,14 +7,17 @@
     tools:context=".welcome">
 
     <TextView
-        android:layout_width="419dp"
-        android:layout_height="734dp"
+        android:layout_width="395dp"
+        android:layout_height="785dp"
         android:background="@drawable/home1080x1920"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:layout_width="230dp"
@@ -22,11 +25,40 @@
         android:layout_marginStart="88dp"
         android:layout_marginTop="510dp"
         android:background="@drawable/rounded_corners"
-        android:text="Continue"
-        android:textColor="#FFF"
-        android:textSize="30dp"
+        android:onClick="chooseLangScreen"
+        android:alpha="0.7"
+        android:text="@string/continueButton"
+        android:textColor="#000"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="chooseLangScreen"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="268dp"
+        android:layout_marginTop="648dp"
+        android:background="@drawable/rounded_corners"
+        android:onClick="aboutScreen"
+        android:alpha="0.7"
+        android:text="@string/aboutButton"
+        android:textColor="#000"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="648dp"
+        android:background="@drawable/rounded_corners"
+        android:onClick="helpScreen"
+        android:alpha="0.7"
+        android:text="@string/help"
+        android:textColor="#000"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
