--- a/GreenTips/app/src/main/res/layout/activity_schedule.xml
+++ b/GreenTips/app/src/main/res/layout/activity_schedule.xml
@@ -45,7 +45,7 @@
             <TimePicker
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></TimePicker>
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
