UI fixes/card fixes
Added home and return-button (which returns to earlier activity). Added slidecards for all categories and fixed "clickability" for all categories.

--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_choose_category.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_choose_category.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/greenback"
     tools:context=".choose_category">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="395dp"
-        android:layout_height="785dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:background="@drawable/greenback"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -55,11 +55,22 @@
                 android:text="@string/transport" />
 
             <Button
+                android:id="@+id/idhousehold"
+                android:alpha="0.7"
+                android:background="@drawable/rounded_tip_corner"
+                android:layout_width="200dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
+                android:onClick="gohousehold"
+                android:text="@string/household" />
+
+            <Button
                 android:id="@+id/idoutdoors"
                 android:alpha="0.7"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="200dp"
                 android:layout_marginTop="10dp"
+                android:onClick="gooutdoors"
                 android:layout_height="wrap_content"
                 android:text="@string/outdoors" />
 
@@ -69,6 +80,7 @@
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="200dp"
                 android:layout_marginTop="10dp"
+                android:onClick="gosocial"
                 android:layout_height="wrap_content"
                 android:text="@string/sociallife" />
 
@@ -77,6 +89,7 @@
                 android:alpha="0.7"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="200dp"
+                android:onClick="goworklife"
                 android:layout_marginTop="10dp"
                 android:layout_height="wrap_content"
                 android:text="@string/worklife" />
