--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_household_tips.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_household_tips.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".transportTips">
+    tools:context=".householdTips">
 
     <TextView
         android:id="@+id/textView"
@@ -13,6 +13,7 @@
         android:background="@drawable/greenback"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:layout_width="313dp"
@@ -34,15 +35,16 @@
         android:layout_marginTop="200dp"
         android:gravity="center"
         android:enabled="false"
-        android:text="@string/transport"
+        android:text="@string/household"
         android:textColor="#000000"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <ScrollView
-        android:id="@+id/scrollViewLTransport"
+        android:id="@+id/scrollViewHousehold"
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:layout_marginTop="250dp"
@@ -52,7 +54,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/scrollLayoutTransport"
+            android:id="@+id/scrollLayoutHousehold"
             android:layout_width="350dp"
             android:layout_height="800dp"
             android:layout_marginTop="360dp"
@@ -60,68 +62,67 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/tip1"
+                android:id="@+id/householdtip1"
                 android:alpha="0.7"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
-                android:text="@string/transporttip1" />
+                android:text="@string/householdtip1" />
 
             <Button
-                android:id="@+id/tip2"
+                android:id="@+id/householdtip2"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/transporttip2" />
+                android:text="@string/householdtip2" />
 
             <Button
-                android:id="@+id/tip3"
+                android:id="@+id/householdtip3"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/transporttip3" />
+                android:text="@string/householdtip3" />
 
             <Button
-                android:id="@+id/tip4"
+                android:id="@+id/householdtip4"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/transporttip4" />
+                android:text="@string/householdtip4" />
 
             <Button
-                android:id="@+id/tip5"
+                android:id="@+id/householdtip5"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/transporttip5" />
+                android:text="@string/householdtip5" />
 
             <Button
-                android:id="@+id/tip6"
+                android:id="@+id/householdtip6"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/transporttip6" />
+                android:text="@string/householdtip6" />
 
             <Button
-                android:id="@+id/tip7"
+                android:id="@+id/householdtip7"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="25dp"
-                android:text="@string/transporttip7" />
-
+                android:text="@string/householdtip7" />
 
         </LinearLayout>
     </ScrollView>
