--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_worklife_tips.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_worklife_tips.xml
@@ -52,12 +52,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/scrollLayoutWorklife"
-            android:layout_width="350dp"
-            android:layout_height="800dp"
-            android:layout_marginTop="360dp"
+            android:id="@+id/scrollLayoutHousehold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="370dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent">
 
             <Button
                 android:id="@+id/worklifetip1"
@@ -133,7 +134,7 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_gravity="center"
-        android:onClick="returnActivity"
+        android:onClick="returnHome"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -146,7 +147,7 @@
         android:background="@drawable/undo"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:onClick="returnHome"
+        android:onClick="returnActivity"
         android:layout_gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
