Added the slide functionality,
More design needed, but the hard part is done :)

--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_worklife_tips.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_worklife_tips.xml
@@ -66,6 +66,7 @@
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
+                android:onClick="goToTransportSlide"
                 android:text="@string/worklifetip1" />
 
             <Button
