UI fixes and added functionality
Added functionality to slide-cards system and fixed the UI

--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_transportslide.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_transportslide.xml
@@ -4,21 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/home1080x1920"
+    android:background="@drawable/greenback"
     tools:context=".transportslide">
+
 
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slideViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
-
-    <LinearLayout
-        android:id="@+id/dotsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
