--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_transport_tips.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_transport_tips.xml
@@ -4,15 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/greenback"
     tools:context=".transportTips">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/greenback"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="313dp"
@@ -42,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:id="@+id/scrollViewLTransport"
+        android:id="@+id/scrollViewTransport"
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:layout_marginTop="250dp"
@@ -61,15 +54,16 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <Button
-                android:id="@+id/tip1"
-                android:alpha="0.7"
+                android:id="@+id/transporttip1"
+                android:onClick="goToTransportSlide"
+                android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:text="@string/transporttip1" />
 
             <Button
-                android:id="@+id/tip2"
+                android:id="@+id/transporttip2"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
@@ -78,7 +72,7 @@
                 android:text="@string/transporttip2" />
 
             <Button
-                android:id="@+id/tip3"
+                android:id="@+id/transporttip3"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
@@ -87,7 +81,7 @@
                 android:text="@string/transporttip3" />
 
             <Button
-                android:id="@+id/tip4"
+                android:id="@+id/transporttip4"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
@@ -96,7 +90,7 @@
                 android:text="@string/transporttip4" />
 
             <Button
-                android:id="@+id/tip5"
+                android:id="@+id/transporttip5"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
@@ -105,7 +99,7 @@
                 android:text="@string/transporttip5" />
 
             <Button
-                android:id="@+id/tip6"
+                android:id="@+id/transporttip6"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
@@ -114,7 +108,7 @@
                 android:text="@string/transporttip6" />
 
             <Button
-                android:id="@+id/tip7"
+                android:id="@+id/transporttip7"
                 android:alpha="0.8"
                 android:background="@drawable/rounded_tip_corner"
                 android:layout_width="350dp"
@@ -147,7 +141,7 @@
         android:background="@drawable/undo"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:onClick="returnButton"
+        android:onClick="returnActivity"
         android:layout_gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
