--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_help.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_help.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="395dp"
         android:layout_height="787dp"
-        android:background="@drawable/greenback"
+        android:background="@drawable/greenhome"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,9 +21,9 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="65dp"
-        android:layout_marginStart="108dp"
+        android:layout_marginStart="105dp"
         android:layout_marginTop="196dp"
-        android:alpha="0.2"
+        android:alpha="0.9"
         android:background="@drawable/rounded_corners"
         android:enabled="false"
         android:text="@string/help"
@@ -36,10 +36,10 @@
         android:id="@+id/TableLayout01"
         android:layout_width="270dp"
         android:layout_height="350dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="212dp"
-        android:alpha="0.2"
+        android:alpha="0.9"
         android:background="@drawable/rounded_corners"
+        android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,10 +51,10 @@
         android:id="@+id/textView2"
         android:layout_width="270dp"
         android:layout_height="331dp"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="210dp"
         android:text="@string/helpcontact"
         android:textColor="#000000"
+        android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
