--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_about.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_about.xml
@@ -16,12 +16,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="65dp"
-        android:layout_marginStart="105dp"
         android:layout_marginTop="196dp"
         android:alpha="0.9"
         android:background="@drawable/rounded_corners"
@@ -29,6 +28,8 @@
         android:text="@string/aboutButton"
         android:textColor="#000"
         android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,7 +40,6 @@
         android:layout_marginTop="212dp"
         android:alpha="0.9"
         android:background="@drawable/rounded_corners"
-        android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
