--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_help.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_help.xml
@@ -21,14 +21,14 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="65dp"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="192dp"
         android:alpha="0.9"
         android:background="@drawable/rounded_corners"
         android:enabled="false"
         android:text="@string/help"
         android:textColor="#000"
         android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,7 +39,6 @@
         android:layout_marginTop="212dp"
         android:alpha="0.9"
         android:background="@drawable/rounded_corners"
-        android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
