--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_welcome.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_welcome.xml
@@ -10,6 +10,8 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <include layout="@layout/base_activity" />
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -124,22 +126,6 @@
         app:layout_constraintVertical_bias="0.97"
         app:srcCompat="@drawable/ic_help"
         android:onClick="helpScreen"/>
-
-    <ImageButton
-        android:id="@+id/languageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corners"
-        android:contentDescription="@string/languageicon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.03"
-        app:srcCompat="@drawable/ic_language"
-        tools:ignore="DuplicateIds"
-        android:onClick="chooseLangScreen"/>
 
     <ImageButton
         android:id="@+id/infoButton"
