--- a/GreenTipsAlpha1/app/src/main/res/layout/base_activity.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/base_activity.xml
@@ -4,14 +4,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/greenback">
+    android:background="@drawable/greenback"
+    tools:context=".BaseActivity">
 
     <ImageButton
         android:id="@+id/languageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_corners"
-        android:contentDescription="@string/languageicon"
+        android:contentDescription="@string/languageIcon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
