--- a/GreenTipsAlpha1/app/src/main/res/values/styles.xml
+++ b/GreenTipsAlpha1/app/src/main/res/values/styles.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#24A808</item>
+        <item name="colorPrimaryDark">#24A808</item>
+        <item name="colorAccent">#24A808</item>
+        <item name="android:statusBarColor">#00000000</item>
     </style>
 
 </resources>
