--- a/GreenTipsAlpha1/app/src/main/res/layout/activity_choose_category.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/activity_choose_category.xml
@@ -95,4 +95,33 @@
                 android:text="@string/worklife" />
 
         </LinearLayout>
+
+    <Button
+        android:id="@+id/homebutton"
+        android:alpha="0.8"
+        android:background="@drawable/homebutton"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="center"
+        android:onClick="returnHome"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="80dp" />
+
+    <Button
+        android:id="@+id/undo"
+        android:alpha="0.8"
+        android:background="@drawable/undo"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:onClick="returnActivity"
+        android:layout_gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="80dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
