--- a/GreenTipsAlpha1/app/src/main/res/layout/slide_functionality.xml
+++ b/GreenTipsAlpha1/app/src/main/res/layout/slide_functionality.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:layout_gravity="center">
+    android:layout_height="fill_parent">
 
     <ImageView
         android:id="@+id/slide_image"
@@ -16,18 +14,18 @@
         android:layout_marginBottom="446dp"
         android:contentDescription="@string/image_slide" />
 
-    <TextView
+    <Button
         android:id="@+id/slide_heading"
         android:layout_width="350dp"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="300dp"
+        android:alpha="0.8"
+        android:background="@drawable/rounded_tip_corner"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="10dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="5dp"
         android:paddingBottom="10dp"
-        android:alpha="1.0"
-        android:background="@drawable/rounded_tip_corner"/>
-
+        android:textAlignment="viewStart" />
 </RelativeLayout>
 
